<resources>
    <string name="app_name">Notefy</string>

    <!--  Home Screen  -->
    <string name="search_note">Search Note</string>
    <string name="note_deleted">Moved to Recycle Bin</string>
    <string name="undo">UNDO</string>
    <string name="note_added">Note Added</string>
    <string name="note_updated">Note Updated</string>
    <string name="profile_updated">Profile Updated</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select all</string>

    <!--  Navigation Drawer  -->
    <string name="view_profile">View Profile</string>
    <string name="home">Home</string>
    <string name="new_note">New Note</string>
    <string name="recycle_bin">Recycle Bin</string>
    <string name="languages">Languages</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="screen_lock">Screen Lock</string>
    <string name="share_app">Share App</string>
    <string name="help_and_feedback">Help and Feedback</string>
    <string name="about">About</string>

    <!--  Sort By Dialog -->
    <string name="sort_by">Sort by</string>
    <string name="bookmarked_only">Bookmarked Only</string>
    <string name="title_a_z">Title [A-Z]</string>
    <string name="title_z_a">Title [Z-A]</string>
    <string name="newest_to_oldest">Newest to Oldest</string>
    <string name="oldest_to_newest">Oldest to Newest</string>

    <!--  NewUpdate Screen  -->
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="edited">Created:</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="delete_note">Do you want to delete the note?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="url_hint">https://wwww.google.com</string>
    <string name="place">Place</string>
    <string name="url">URL</string>
    <string name="please_enter_a_link">Please Enter an URL</string>
    <string name="place_hint">New York, United States</string>
    <string name="please_enter_a_place">Please Enter a Place</string>
    <string name="title_cannot_be_empty">Title Cannot be Empty</string>
    <string name="ok">OK</string>
    <string name="delete_todo">Do you want to remove Todo Checklist?</string>

    <!--  Add Feature Dialog  -->
    <string name="reminder">Reminder</string>

    <!--  Add Color Dialog  -->
    <string name="color">Color</string>
    <string name="more">More</string>

    <!--  Add Image Dialog  -->
    <string name="take_photo">Take Photo</string>
    <string name="add_image">Add Image</string>

    <!--  Add TodoChecklist Dialog  -->
    <string name="todo_checklist">Todo Checklist</string>
    <string name="enter_description">Enter Description</string>
    <string name="done">Done</string>

    <!--  Choose Language Dialog  -->
    <string name="next">Continue</string>
    <string name="choose_language">Choose Language</string>

    <!--  Profile Screen -->
    <string name="profile">Profile</string>
    <string name="alex_parker">Alex Parker</string>
    <string name="reminders">Reminders</string>
    <string name="todos">Todos</string>
    <string name="alex_parker_gmail_com">alex.parker@gmail.com</string>
    <string name="save">Save</string>
    <string name="notes">Notes</string>
    <string name="_1_012_345_6789">+1 012 345 6789</string>
    <string name="enter_valid_email">Please Enter a valid Email</string>
    <string name="enter_valid_phone">Please Enter a valid Phone</string>

    <!--  Share app dialog -->
    <string name="share_ask">If you find Notefy useful, share it with your friends</string>
    <string name="later">Later</string>
    <string name="share">Share</string>
    <string name="message">Hi there &#128075;, I\'ve found a super cool Notes app that can make your life easier &#128515;\n\nYou can create Colorful notes with Text and Photos, Share notes, set Reminders, create a Todo list, and much more.\n\nExperience the app from the play store &#128071;\n\nplay.google.com/store/apps/details?id=com.imangi.templerun</string>
    <string name="share_from_notefy">Share from Notefy:</string>
    <string name="oops">Oops! Cannot be Share</string>

    <!--  Help and feedback Screen -->
    <string name="provide_feedback">Provide Feedback</string>
    <string name="write_us">Write Us</string>
    <string name="faq_s">FAQs :</string>
    <string name="empty_note">Empty Notes</string>
    <string name="q1">How to use Notefy?</string>
    <string name="q2">How to create a New Note?</string>
    <string name="q3">What can be added in the Note?</string>
    <string name="q4">How to set Reminders?</string>
    <string name="q5">How to Create a Todo list?</string>
    <string name="q6">How to Delete Notes?</string>
    <string name="q7">Where can I Find deleted Notes?</string>
    <string name="q8">How to update my Profile?</string>
    <string name="q9">How can I change the Display view?</string>
    <string name="q10">How can I Sort my Notes?</string>
    <string name="q11">How can I Share Notes?</string>
    <string name="q12">How can I change the App Theme?</string>
    <string name="q13">How can I change the App Language?</string>
    <string name="q14">How can I make Notes Colorful?</string>
    <string name="q15">How to Secure my App?</string>
    <string name="a1">You can use Notefy to take Notes, set Reminders, that you want to notified. Add Todo list, Colors, Images, URLs and Places to your notes. Choose language that you are comfortable. You can share your notes with friends, also you can change theme of the app, secure your app by enabling Screen Lock and much more.</string>
    <string name="a2">You can create a new note in two ways:\n1. Click on the + button at the bottom-right side of the Home screen. Or\n2. Click on the Menu icon of the top action bar, and now click on the New Note tab.\nA new window will open to create a new note.</string>
    <string name="a3">You can add the following features in the Note:\n1. Note Title\n2. Note Description\n3. Reminder\n4. Place\n5. URL\n6. Colored background\n7. Image\n8. Todo list\n9. You can also bookmark the note</string>
    <string name="a4">Click on the Add box icon at the bottom side of the New note screen, and select Reminder. A Calendar will pop up, choose the date you want to set the reminder and click on OK. Now a Clock will pop up, choose the time and click on OK. Now you have successfully set the reminder. A confirmation message will also display. Now based on the date and time you\'ve chosen a Notification with note title, description and Image will be notified.</string>
    <string name="a5">Click on the Checklist icon at the bottom side of the New note screen. Todo Checklist popup will occur. You can add, delete, and update any number of to-do items with tick boxes, once completed click on the Done button.</string>
    <string name="a6">You can delete notes in the following ways:\n1. To delete a single note, you can simply swipe it to the left or right side of the home screen.\n2. To delete multiple notes at the same time, long press on any note and select the notes you want to delete or click on select all in the action bar, then click on the Delete icon.\n3. Open the note you want to delete, then click on the delete icon at the top action bar.\nNote: You can UNDO the notes right after you delete them.</string>
    <string name="a7">Once you delete the notes, they will be added to Recycle bin. And from there either you can restore them or delete them forever. You can find Recycle bin in the Navigation drawer.</string>
    <string name="a8">You can update your profile photo, name, email, and phone in the profile page. You can open your profile by\n1. Click on the profile photo on the home screen at the top-right corner. Or\n2. Click on the Profile tab from the navigation drawer.</string>
    <string name="a9">To change the view, you can switch between grid view and linear view by clicking on the grid button right side of the Search view on the Home screen.</string>
    <string name="a10">Once you add notes, you can display them in any of the following order:\n1. Bookmarked\n2. Title by Asc order\n3. Title by Desc order\n4. Newest to oldest\n5. Oldest to newest\nTo do so click on the Sort by an icon on the top action bar of the home screen. The default order is Newest to oldest.</string>
    <string name="a11">To share your notes with friends, you can open the note that you want to share, and click on the Share button on the top-right action bar. You can choose any medium to share it.</string>
    <string name="a12">Open the navigation drawer from the left side, toggle the Dark theme switch to enable Dark mode, and disable the switch for light mode.</string>
    <string name="a13">Currently, Notefy supports 15 different languages. English is the default language, you can change any language of your choice. Open the language screen from the left-side navigation drawer and select any language. Click on continue.</string>
    <string name="a14">You can change the notes\' background color of your choice. Click on the color icon in the new note screen. You can choose either from default colors or from the color picker.</string>
    <string name="a15">To Secure your app, you can enable the Screen Lock feature from the left side navigation drawer, it will accept your phone password or biometric or pattern. You can enable or disable based on your need.</string>

    <!--  Main Activity Screen -->
    <string name="authenticate_with_biometric">Authenticate with Biometric</string>
    <string name="auth_error">Authentication error: %s</string>

    <!--  Recycle bin Screen -->
    <string name="add_a_new_note_to_appear_here">Add a new note to appear here</string>
    <string name="empty_recycle_bin">Empty Recycle Bin</string>
    <string name="notes_you_delete_will_appear_here">Notes you delete will appear here</string>
    <string name="notes_deleted_forever">Notes Deleted Forever</string>
    <string name="restore">Restore</string>
    <string name="do_you_want_to_restore_the_note">Do you want to restore the note?</string>
    <string name="note_restored">Note Restored</string>

    <!--  About Screen -->
    <string name="version">App Version: %s</string>
    <string name="about_info">Notefy is used to take Notes, add Reminders, create a Todo list, and much more. You can save your notes with Images, Background Colors, Places, and URLs.\n\n
        You can filter notes based on your Preferences, Search and Share your notes. It supports a Dark theme and a Light theme. For Security, it has a Screen Lock feature.\n\n
        You can choose your preferred Language, currently, Notefy supports 15 different languages. For any help, you can either read the FAQs or Contact us.</string>
    <string name="reminder_permission_error">Please grant Notification permission from App Settings to set Reminder</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>