<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/restore"
        android:icon="@drawable/ic_baseline_restore_24"
        android:title="@string/restore"
        android:contentDescription="@string/restore"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_baseline_select_all_24"
        android:title="@string/select_all"
        android:iconTint="?attr/colorControlNormal"
        android:contentDescription="@string/select_all"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete_all"
        android:icon="@drawable/ic_baseline_delete_outline_24"
        android:title="@string/delete"
        android:contentDescription="@string/delete"
        app:showAsAction="ifRoom"/>
</menu>