<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Dialog"
    android:background="@drawable/popup_background">

    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:theme="@style/DialogView"/>

    <LinearLayout
        android:id="@+id/add_reminder_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_notifications_active_24"
            android:contentDescription="@string/reminder"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder"
            android:layout_marginStart="25dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_place_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_outline_location_on_24"
            android:contentDescription="@string/place" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:layout_marginStart="25dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/add_url_layout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:padding="8dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_insert_link_24"
            android:contentDescription="@string/url" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:layout_marginStart="25dp"
            android:autoLink="web"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>