<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            app:tint = "@color/white"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:elevation="15dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/home" />

        <TextView
            android:id="@+id/name_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="15dp"
            android:maxLines="1"
            android:layout_toStartOf="@+id/delete_photo"
            android:layout_toEndOf="@+id/back_screen"
            android:background="@null"
            android:elevation="15dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/delete_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:elevation="15dp"
            android:src="@drawable/ic_baseline_delete_24"
            android:contentDescription="@string/delete" />

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/add_image" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:elevation="10dp"
            android:src="#4D000000"
            android:contentDescription="Background Shadow" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>